Problema serialització JSON domini de SISTRA2 #119